--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-helmet-async": "^2.0.3",
+    "react-hook-form": "^7.51.4",
     "react-hotkeys-hook": "^4.4.1",
     "react-router-dom": "^6.21.0",
     "react-use-websocket": "^4.7.0",
     "recoil": "^0.7.7",
-    "vite-plugin-mkcert": "^1.17.5"
+    "vite-plugin-mkcert": "^1.17.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
