--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@mui/material": "^5.15.0",
     "@mui/system": "^5.15.0",
     "@mui/utils": "^5.15.0",
+    "@tanstack/react-query": "^5.37.1",
     "apexcharts": "^3.49.1",
+    "dexie": "^4.0.4",
+    "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-json": "^3.1.0",
     "is-mobile": "^4.0.0",
     "notistack": "^3.0.1",
