--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dexie-react-hooks": "^1.1.7",
     "eslint-plugin-json": "^3.1.0",
     "is-mobile": "^4.0.0",
+    "leaflet": "^1.9.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -48,8 +49,10 @@
     "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.51.4",
     "react-hotkeys-hook": "^4.4.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0",
     "react-use-websocket": "^4.7.0",
+    "react-window": "^1.8.10",
     "recoil": "^0.7.7",
     "vite-plugin-mkcert": "^1.17.5",
     "yup": "^1.4.0"
@@ -57,9 +60,11 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
