--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-json": "^3.1.0",
     "is-mobile": "^4.0.0",
     "leaflet": "^1.9.4",
+    "material-ui-popup-state": "^5.1.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
