--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/lab": "5.0.0-alpha.156",
     "@mui/material": "^5.15.0",
@@ -56,7 +57,8 @@
     "react-window": "^1.8.10",
     "recoil": "^0.7.7",
     "vite-plugin-mkcert": "^1.17.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
