--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/system": "^5.15.0",
     "@mui/utils": "^5.15.0",
     "@tanstack/react-query": "^5.37.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "apexcharts": "^3.49.1",
     "dexie": "^4.0.4",
     "dexie-react-hooks": "^1.1.7",
