--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-helmet-async": "^2.0.3",
