--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-color": "^2.19.3",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -78,6 +79,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.17",
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
